// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index renders component 1`] = `
<Memo(WithStyles(WindowWrapper))
  className="root-mock"
>
  <WithStyles(ForwardRef(Card))
    className="card-mock"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="row"
    >
      <WithStyles(ForwardRef(CardMedia))
        className="icon-mock"
        image="test-file-stub"
      />
      <WithStyles(ForwardRef(CardContent))
        className="content-mock"
      >
        <WithStyles(ForwardRef(Typography))
          align="justify"
          gutterBottom={true}
          variant="body1"
        >
          Waiting for Zcash node.
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(LinearProgress)) />
      </WithStyles(ForwardRef(CardContent))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Card))>
</Memo(WithStyles(WindowWrapper))>
`;

exports[`Index renders when bootstrapping 1`] = `
<Memo(WithStyles(WindowWrapper))
  className="root-mock"
>
  <WithStyles(ForwardRef(Card))
    className="card-mock"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="row"
    >
      <WithStyles(ForwardRef(CardMedia))
        className="icon-mock"
        image="test-file-stub"
      />
      <WithStyles(ForwardRef(CardContent))
        className="content-mock"
      >
        <WithStyles(ForwardRef(Typography))
          align="justify"
          gutterBottom={true}
          variant="body1"
        >
          Launching node
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(LinearProgress)) />
      </WithStyles(ForwardRef(CardContent))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Card))>
</Memo(WithStyles(WindowWrapper))>
`;
